fix: restore scrollbar on home page

--- a/apps/classroomio-com/src/app.css
+++ b/apps/classroomio-com/src/app.css
@@ -6,10 +6,6 @@ body {
   overflow-x: hidden;
 }
 
-body::-webkit-scrollbar {
-  display: none;
-}
-
 li {
   font-family: 'Inter', sans-serif;
 }
